NetBSD Problem Report #50858

From www@NetBSD.org  Fri Feb 26 17:33:02 2016
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.NetBSD.org [199.233.217.200])
	(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
	(Client CN "mail.netbsd.org", Issuer "Postmaster NetBSD.org" (verified OK))
	by mollari.NetBSD.org (Postfix) with ESMTPS id 965FA7ACCE
	for <gnats-bugs@gnats.NetBSD.org>; Fri, 26 Feb 2016 17:33:02 +0000 (UTC)
Message-Id: <20160226173301.B692A7ACDF@mollari.NetBSD.org>
Date: Fri, 26 Feb 2016 17:33:01 +0000 (UTC)
From: dcb314@hotmail.com
Reply-To: dcb314@hotmail.com
To: gnats-bugs@NetBSD.org
Subject: src/sys/arch/powerpc/isa/isadma_machdep.c: 2 * redundant conditions
X-Send-Pr-Version: www-1.0

>Number:         50858
>Category:       port-powerpc
>Synopsis:       src/sys/arch/powerpc/isa/isadma_machdep.c: 2 * redundant conditions
>Confidential:   no
>Severity:       non-critical
>Priority:       low
>Responsible:    port-powerpc-maintainer
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Fri Feb 26 17:35:00 +0000 2016
>Closed-Date:    Fri Feb 26 23:38:23 +0000 2016
>Last-Modified:  Fri Feb 26 23:38:23 +0000 2016
>Originator:     David Binderman
>Release:        cvs dated 20160226
>Organization:
>Environment:
>Description:
1.


[src/sys/arch/powerpc/isa/isadma_machdep.c:299]: (style) Redundant condition: error!=0. 'error==0 || (error!=0 && (cookie.id_flags&1)==0)' is equivalent to 'error==0 || (cookie.id_flags&1)==0'


Source code is

   if (error == 0 ||
        (error != 0 && (cookie->id_flags & ID_MIGHT_NEED_BOUNCE) == 0))

2.

[src/sys/arch/powerpc/isa/isadma_machdep.c:371]: (style) Redundant condition: error!=0. 'error==0 || (error!=0 && (cookie.id_flags&1)==0)' is equivalent to 'error==0 || (cookie.id_flags&1)==0'

Source code is

    if (error == 0 ||
        (error != 0 && (cookie->id_flags & ID_MIGHT_NEED_BOUNCE) == 0))


>How-To-Repeat:

>Fix:

>Release-Note:

>Audit-Trail:
From: "Christos Zoulas" <christos@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/50858 CVS commit: src/sys/arch/powerpc/isa
Date: Fri, 26 Feb 2016 13:17:40 -0500

 Module Name:	src
 Committed By:	christos
 Date:		Fri Feb 26 18:17:39 UTC 2016

 Modified Files:
 	src/sys/arch/powerpc/isa: isadma_machdep.c

 Log Message:
 PR/50858: David Binderman: Remove redundant code.


 To generate a diff of this commit:
 cvs rdiff -u -r1.9 -r1.10 src/sys/arch/powerpc/isa/isadma_machdep.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: wiz@NetBSD.org
State-Changed-When: Fri, 26 Feb 2016 23:38:23 +0000
State-Changed-Why:
Christos fixed it, thanks.


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2014 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.