PR/50858: David Binderman: Remove redundant code.