sys/arch/powerpc/isa/isadma_machdep.c
@@ -1,4 +1,4 @@
-/*	$NetBSD: isadma_machdep.c,v 1.9 2013/06/09 12:52:33 kiyohara Exp $	*/
+/*	$NetBSD: isadma_machdep.c,v 1.10 2016/02/26 18:17:39 christos Exp $	*/
 
 /*-
  * Copyright (c) 1996, 1997, 1998 The NetBSD Foundation, Inc.
@@ -31,7 +31,7 @@
  */
 
 #include <sys/cdefs.h>
-__KERNEL_RCSID(0, "$NetBSD: isadma_machdep.c,v 1.9 2013/06/09 12:52:33 kiyohara Exp $");
+__KERNEL_RCSID(0, "$NetBSD: isadma_machdep.c,v 1.10 2016/02/26 18:17:39 christos Exp $");
 
 #define ISA_DMA_STATS
 
@@ -296,8 +296,7 @@ _isa_bus_dmamap_load(bus_dma_tag_t t, bus_dmamap_t map, void *buf,
 	 * and we can bounce, we will.
 	 */
 	error = _bus_dmamap_load(t, map, buf, buflen, p, flags);
-	if (error == 0 ||
-	    (error != 0 && (cookie->id_flags & ID_MIGHT_NEED_BOUNCE) == 0))
+	if (error == 0 || (cookie->id_flags & ID_MIGHT_NEED_BOUNCE) == 0)
 		return (error);
 
 	/*
@@ -368,8 +367,7 @@ _isa_bus_dmamap_load_mbuf(bus_dma_tag_t t, bus_dmamap_t map, struct mbuf *m0,
 	 * and we can bounce, we will.
 	 */
 	error = _bus_dmamap_load_mbuf(t, map, m0, flags);
-	if (error == 0 ||
-	    (error != 0 && (cookie->id_flags & ID_MIGHT_NEED_BOUNCE) == 0))
+	if (error == 0 || (cookie->id_flags & ID_MIGHT_NEED_BOUNCE) == 0)
 		return (error);
 
 	/*
